# WeatherApp

./: .gitignore  LICENSE  pyproject.toml
config/: settings.py
